--- a/Intelligent Systems CW/Intelligent Systems CW.vcxproj.filters
+++ b/Intelligent Systems CW/Intelligent Systems CW.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClCompile Include="FieldState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Direction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
