Finished all blind search algorithms and started A*

--- a/Intelligent Systems CW/Intelligent Systems CW.vcxproj
+++ b/Intelligent Systems CW/Intelligent Systems CW.vcxproj
@@ -145,6 +145,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Algorithms.h" />
     <ClInclude Include="Block.h" />
     <ClInclude Include="Direction.h" />
     <ClInclude Include="Field.h" />
