--- a/Intelligent Systems CW/Intelligent Systems CW.vcxproj.filters
+++ b/Intelligent Systems CW/Intelligent Systems CW.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Tree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Algorithms.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
