--- a/Intelligent Systems CW/Intelligent Systems CW.vcxproj.filters
+++ b/Intelligent Systems CW/Intelligent Systems CW.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Algorithms.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CostTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -81,6 +84,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Tree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CostTree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
