--- a/Intelligent Systems CW/Intelligent Systems CW.vcxproj
+++ b/Intelligent Systems CW/Intelligent Systems CW.vcxproj
@@ -150,7 +150,6 @@
     <ClInclude Include="CostTree.h" />
     <ClInclude Include="Direction.h" />
     <ClInclude Include="Field.h" />
-    <ClInclude Include="FieldState.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Position.h" />
     <ClInclude Include="stdafx.h" />
@@ -159,11 +158,11 @@
     <ClInclude Include="Tree.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Algorithms.cpp" />
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="CostTree.cpp" />
     <ClCompile Include="Direction.cpp" />
     <ClCompile Include="Field.cpp" />
-    <ClCompile Include="FieldState.cpp" />
     <ClCompile Include="Intelligent Systems CW.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Position.cpp" />
